# csnn-simulator

./: .gitignore  CMakeLists.txt  README.md
apps/: Bench7.cpp  BenchCifar10.cpp  BenchCifar10W.cpp  BenchCifar10WP.cpp  BenchFaceMotor.cpp  BenchMnist.cpp  CIFAR10.cpp  Cifar10.cpp  Cifar10Grayscale.cpp  Cifar10Grayscale4x4.cpp  Cifar10GrayscaleMulti.cpp  Cifar10GrayscaleMultiTest.cpp  Cifar10GrayscaleMultiTest2.cpp  Cifar10GrayscaleTest.cpp  Cifar10GrayscaleTest2.cpp  Cifar10Multi.cpp  ETH80.cpp  ETH80.json  ETH80Grayscale.cpp  ETH80GrayscaleMulti.cpp  ETH80GrayscaleTest.cpp  ETH80Input.cpp  ETH80Multi.cpp  ETH80Spyker.cpp  ETH80Spyker2.cpp  ETH80Spyker3.cpp  FaceMotor.cpp  Images.cpp  MNIST.cpp  Mnist.cpp  MnistReorder.cpp  MnistTest.cpp  MnistThExp.cpp  MnistUnitTest.cpp  STL10.cpp  STL10Grayscale.cpp  STL10GrayscaleMulti.cpp  STL10GrayscaleMultiTest.cpp  STL10Preprocess.cpp  STLInput.cpp  (+29 more)
apps-config/: CIFAR10.json  ETH80.json  MNIST.json  STL10.json
apps/benchmarks/: Bench1.cpp  Bench1Extra.cpp
apps/cifar/: Cifar10_L1.cpp  Cifar10_L2.cpp
apps/generic/: csnn_2layers_test.cpp  csnn_2layers_train.cpp  csnn_test.cpp  csnn_test_avgpool.cpp  csnn_train.cpp  csnn_train_avgpool.cpp  preprocess.cpp
apps/miscelaneous/: Frames.cpp
apps/mnist/: MnistReorder.cpp  MnistThExp.cpp  Mnist_L3.cpp
apps/multi_stream/: FeatureEvaluation.cpp  (+1 more)
config/: CIFAR10.json  CIFAR100.json  ETH80.json  F-MNIST.json  MNIST.json  SPIKES_MNIST.json  STL10.json
configs/: CIFAR10.json  ETH80.json  MNIST.json  STL10.json  STL10Preprocess.json
dataset/: Mnist_Formatter.py
dep/: filesystem.hpp  npy.hpp
include/: Analysis.h  Benchmark.h  ClassParameter.h  Distribution.h  Experiment.h  InputConverter.h  Layer.h  Math.h  OutputConverter.h  Process.h  SparseTensor.h  Spike.h  Tensor.h
old_apps/: ETH80Spyker.cpp  Mnist.cpp  STL10Multi.cpp
src/: Experiment.cpp  InputConverter.cpp  Layer.cpp  OutputConverter.cpp  SpikeConverter.cpp
src/dataset/: ETH.cpp  (+11 more)
whiten-filters/: CIFAR10
(+133 files in other folders)
